--- a/stock/Dockerfile
+++ b/stock/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile
 
 FROM pottava/golang:1.5
-MAINTAINER ryuzaki01
+LABEL maintainer="shinji666mmc@gmail.com"
 
-LABEL jp.co.supinf.works.application="go-ms-stock" \
-      jp.co.supinf.works.license="MIT"
+RUN go get -u github.com/justinas/alice
+RUN go get -u github.com/ryuzaki01/go-ms/stock
