--- a/encrypt/Dockerfile
+++ b/encrypt/Dockerfile
@@ -1,9 +1,7 @@
 # Dockerfile
 
 FROM pottava/golang:1.5
-MAINTAINER ryuzaki01
+LABEL maintainer="shinji666mmc@gmail.com"
 
 RUN go get -u github.com/justinas/alice
-
-LABEL jp.co.supinf.works.application="go-ms-encrypt" \
-      jp.co.supinf.works.license="MIT"
+RUN go get -u github.com/ryuzaki01/go-ms/encrypt
