--- a/encrypt/Dockerfile
+++ b/encrypt/Dockerfile
@@ -1,7 +1,6 @@
 # Dockerfile
 
-FROM pottava/golang:1.5
+FROM golang:1.5
 LABEL maintainer="shinji666mmc@gmail.com"
 
-RUN go get -u github.com/justinas/alice
 RUN go get -u github.com/ryuzaki01/go-ms/encrypt
